--- a/sass/components/_social-links-list.scss
+++ b/sass/components/_social-links-list.scss
@@ -1,19 +1,20 @@
 .social-list {
     display: flex;
     margin-top: 16px;
+    .footer-social>& {
+        margin: 0;
+    }
 }
 
 .social-li {
     margin-left: 10px;
-}
 
-.social-li:first-child {
-    margin-left: 0;
+    &:first-child {
+        margin-left: 0;
+    }
 }
 
 .social-li>a {
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,53 +22,34 @@
     width: 44px;
     border-radius: 50%;
     fill: var(--icon-color);
-}
 
-.social-li>a:hover,
-.social-li>a:focus {
-    background-color: var(--link-active);
-    fill: #fff;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        background-color: var(--link-active);
+        fill: #fff;
+    }
 }
 
 .icon-social {
     display: block;
-    /* height: 20px; */
-    /* width: 20px; */
     fill: inherit;
+    .footer-social & {
+        fill: #FFFFFF;
+    }
 }
 
+// ===Footer=== //
 
-.footer-social {
-    margin-left: 70px;
-}
-
-.footer-social>.social-list {
-    margin: 0;
-}
-
-.footer-social>h3 {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-
-    margin-bottom: 20px;
-}
-
-.footer-social .icon-social {
-    fill: #FFFFFF;
-}
 
 .footer-social a {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
-}
 
-.footer-social a:hover ,
-.footer-social a:focus {
-    background-color: var(--link-active);
+    &:hover,
+    &:focus {
+        background-color: var(--link-active);
+    }
 }
