--- a/css/main.css
+++ b/css/main.css
@@ -1066,14 +1066,12 @@ a {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.submit-subscription:hover, .submit-subscription:focus {
+  background-color: var(--button-active-color);
+}
 
 .submit-subscription svg {
   margin-left: 10px;
-}
-
-.submit-subscription:hover,
-.submit-subscription:focus {
-  background-color: var(--button-active-color);
 }
 
 /* Section PORTFOLIO --*/
