--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -147,14 +147,19 @@ display: flex;
      border: none;
      cursor: pointer;
 
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background-color: var(--button-active-color);
+    }
+
  }
 
- .submit-subscription svg {
+.submit-subscription svg {
 margin-left: 10px;
  }
 
-.submit-subscription:hover,
-.submit-subscription:focus {
-background-color: var(--button-active-color);
-}
+
+
+
