--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -12,10 +12,10 @@
     width: calc(100%/4);
 
     margin-left: var(--space-card);
-}
 
-.feature-card:first-child {
-    margin-left: 0;
+    &:first-child {
+        margin-left: 0;
+    }
 }
 
 .bord-feature {
