--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,11 +2,10 @@
 .footer {
 background-color: var(--bg-footer-color);
 padding: 60px 0px;
-}
-
-.footer>.container {
-display: flex;
-align-items: baseline;
+&>.container {
+        display: flex;
+        align-items: baseline;
+    }
 }
 
 .footer-list {
