--- a/css/main.css
+++ b/css/main.css
@@ -589,13 +589,12 @@ a {
 .hero-section {
   padding: 200px 0;
   text-align: center;
+  background-size: 1600px auto;
   background-color: #AFB1B8;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-fon-min.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-fon-min.jpg);
-  /* background-attachment: fixed; */
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 1600px auto;
 }
 
 .hero-heading {
@@ -755,7 +754,6 @@ a {
   width: 25%;
   margin-left: var(--space-card);
 }
-
 .team-card:first-child {
   margin-left: 0;
 }
@@ -833,8 +831,6 @@ a {
 }
 
 .link-client {
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -849,10 +845,10 @@ a {
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   fill: var(--icon-color);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.link-client:hover,
-.link-client:focus {
+.link-client:hover, .link-client:focus {
   fill: var(--link-active);
   border: 1px solid var(--link-active);
 }
