--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -25,12 +25,13 @@ background-color: var(--bg-taam-card-color);
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
 width: calc(100%/4) ;
-margin-left: var(--space-card);
-}
-.team-card:first-child {
-    margin-left: 0;
-}
 
+margin-left: var(--space-card);
+
+    &:first-child {
+        margin-left: 0;
+    }
+}
 /*-------- Images--------*/
 .imag-team {
     width: 100%;
