--- a/css/main.css
+++ b/css/main.css
@@ -492,13 +492,16 @@ a {
 }
 
 .nav-element {
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--nav-color);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-element:focus, .nav-element:hover {
+  color: var(--link-active);
 }
 
 .nav-list > .li-nav {
@@ -542,8 +545,6 @@ a {
 }
 
 .contact {
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -560,12 +561,10 @@ a {
   text-decoration: none;
   color: var(--contacts-color);
   fill: var(--contacts-color);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.nav-element:focus,
-.nav-element:hover,
-.contact:hover,
-.contact:focus {
+.contact:hover, .contact:focus {
   color: var(--link-active);
   fill: var(--link-active);
 }
@@ -581,7 +580,6 @@ a {
   display: flex;
   margin-left: 50px;
 }
-
 .li-contact:first-child {
   margin-left: 0;
 }
