--- a/sass/layout/_heder.scss
+++ b/sass/layout/_heder.scss
@@ -17,13 +17,18 @@ align-items: center;
 }
 
 .nav-element {
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--nav-color);
+
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus,
+    &:hover {
+    color: var(--link-active);
+    }
 }
 
 .nav-list>.li-nav {
@@ -63,8 +68,6 @@ border-radius: 2px;
 }
 
 .contact {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -76,13 +79,14 @@ border-radius: 2px;
     text-decoration: none;
     color: var(--contacts-color);
     fill: var(--contacts-color);
-}
-.nav-element:focus,
-.nav-element:hover,
-.contact:hover,
-.contact:focus {
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
     color: var(--link-active);
     fill: var(--link-active);
+    }
 }
 
 .icon-maill ,.icon-tell {
@@ -93,7 +97,10 @@ border-radius: 2px;
 .li-contact {
     display: flex;
     margin-left: 50px;
+
+    &:first-child {
+        margin-left: 0;
+        }
 }
-.li-contact:first-child {
-    margin-left: 0;
-}
+
+
