--- a/css/main.css
+++ b/css/main.css
@@ -1078,8 +1078,6 @@ a {
 }
 
 .button-portfolio {
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: auto;
   min-height: 38px;
   min-width: 73px;
@@ -1096,16 +1094,10 @@ a {
   color: var(--project-btn-text);
   cursor: pointer;
   background: var(--project-bg-btn);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button-portfolio:hover {
-  background-color: var(--button-color);
-  color: var(--project-btn-active-text);
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.button-portfolio:focus {
+.button-portfolio:hover, .button-portfolio:focus {
   background-color: var(--button-color);
   color: var(--project-btn-active-text);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -1131,11 +1123,9 @@ a {
   margin-left: var(--space-card);
   margin-bottom: var(--space-card);
 }
-
 .project-card:nth-child(3n+1) {
   margin-left: 0;
 }
-
 .project-card:nth-last-of-type(-n+3) {
   margin-bottom: 0;
 }
@@ -1143,9 +1133,7 @@ a {
 .link-project {
   display: block;
 }
-
-.link-project:hover,
-.link-project:focus {
+.link-project:hover, .link-project:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -1179,9 +1167,7 @@ a {
   color: #FFFFFF;
   background-color: rgba(33, 150, 243, 0.9);
 }
-
-.link-project:hover .description-hover,
-.link-project:focus .description-hover {
+.link-project:hover .description-hover, .link-project:focus .description-hover {
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
 }
