--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -1,10 +1,10 @@
 /* Section PORTFOLIO --*/
 
-
 /* BUTTONS PORTFOLIO */
 .nav-projects {
     display: flex;
     justify-content: center;
+
     grid-gap: 8px;
     margin-left: auto;
     margin-right: auto;
@@ -12,41 +12,35 @@
 }
 
 .button-portfolio {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+width: auto;
+min-height: 38px;
+min-width: 73px;
+border-radius: 4px;
+border: var(--project-border-btn);
+padding: 6px 22px;
 
-    width: auto;
-    min-height: 38px;
-    min-width: 73px;
-    border-radius: 4px;
-    border: var(--project-border-btn);
-    padding: 6px 22px;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--project-btn-text);
+cursor: pointer;
+background: var(--project-bg-btn);
 
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--project-btn-text);
-    cursor: pointer;
-    background: var(--project-bg-btn);
-}
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.button-portfolio:hover {
-    background-color: var(--button-color);
-    color: var(--project-btn-active-text);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.button-portfolio:focus {
-    background-color: var(--button-color);
-    color: var(--project-btn-active-text);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    &:hover,
+    &:focus {
+        background-color: var(--button-color);
+        color: var(--project-btn-active-text);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
 }
 
 /* LIST OUR PROJECTS PORTFOLIO*/
-
 .project-list {
     display: flex;
     flex-wrap: wrap;
@@ -55,31 +49,32 @@
 .img-project {
     display: block;
     width: 100%;
-
 }
 
 .project-card {
     width: calc((100%/3) - (2*var(--space-card)));
     margin-left: var(--space-card);
     margin-bottom: var(--space-card);
+
+    &:nth-child(3n+1) {
+        margin-left: 0;
+        }
+    
+    &:nth-last-of-type(-n+3) {
+        margin-bottom: 0;
+        }
 }
 
-.project-card:nth-child(3n+1) {
-    margin-left: 0;
-}
-
-.project-card:nth-last-of-type(-n+3) {
-    margin-bottom: 0;
-}
 
 .link-project {
     display: block;
+
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
-.link-project:hover,
-.link-project:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 
 
 .thumb-img-project {
@@ -111,13 +106,12 @@
     letter-spacing: 0.03em;
     color: #FFFFFF;
     background-color: rgba(33, 150, 243, 0.9);
-}
 
-.link-project:hover .description-hover,
-.link-project:focus .description-hover {
-    transform: translateY(0%);
+    .link-project:hover &,
+    .link-project:focus & {
+            transform: translateY(0%);
+        }
 }
-
 
 .card-text {
     padding-top: 20px;
