--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/_variables.scss";
 @import "./utils/_visually-hidden.scss";
+@import "./utils/placeholders";
 
 @import "./base/_base.scss";
 
