--- a/css/main.css
+++ b/css/main.css
@@ -491,7 +491,7 @@ a {
   display: flex;
 }
 
-.nav-element {
+.navigation__element {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -500,7 +500,7 @@ a {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-element:focus, .nav-element:hover {
+.navigation__element:focus, .navigation__element:hover {
   color: var(--link-active);
 }
 
@@ -518,7 +518,6 @@ a {
   color: var(--link-active);
   position: relative;
 }
-
 .current::after {
   content: "";
   display: block;
@@ -539,12 +538,22 @@ a {
   margin-left: auto;
 }
 
-.li-contact > a {
+.contacts__li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 50px;
+}
+.contacts__li:first-child {
+  margin-left: 0;
+}
+
+.contacts__li > a {
   padding-top: 32px;
   padding-bottom: 32px;
 }
 
-.contact {
+.contacts__contact {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -564,24 +573,14 @@ a {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact:hover, .contact:focus {
+.contacts__contact:hover, .contacts__contact:focus {
   color: var(--link-active);
   fill: var(--link-active);
 }
 
-.icon-maill, .icon-tell {
+.contacts__icon-maill, .contacts__icon-tell {
   fill: inherit;
   margin-right: 10px;
-}
-
-.li-contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 50px;
-}
-.li-contact:first-child {
-  margin-left: 0;
 }
 
 .hero-section {
