--- a/sass/layout/_heder.scss
+++ b/sass/layout/_heder.scss
@@ -16,7 +16,7 @@ align-items: center;
     display: flex;
 }
 
-.nav-element {
+.navigation__element {
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -42,32 +42,43 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 padding-top: 32px;
 padding-bottom: 32px;
 color: var(--link-active);
-position: relative
+position: relative;
+
+    &::after {
+    content: "";
+    display: block;
+    left: 0;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: var(--link-active);
+    border-radius: 2px;
+        }
 }
 
-.current::after {
-content: "";
-display: block;
-left: 0;
-bottom: 0;
-position: absolute;
-width: 100%;
-height: 4px;
-background-color: var(--link-active);
-border-radius: 2px;
-}
+
 /* --------------CONTACTS --------------*/
 .contacts {
     display: flex;
     margin-left: auto;
 }
 
-.li-contact>a {
+.contacts__li {
+    display: flex;
+
+    margin-left: 50px;
+
+    &:first-child {
+        margin-left: 0;
+    }
+}
+.contacts__li>a {
     padding-top: 32px;
     padding-bottom: 32px;
 }
 
-.contact {
+.contacts__contact {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -89,19 +100,10 @@ border-radius: 2px;
     }
 }
 
-.icon-maill ,.icon-tell {
+.contacts__icon-maill ,.contacts__icon-tell {
     fill: inherit;
     margin-right: 10px;
 }
 
-.li-contact {
-    display: flex;
-    
-    margin-left: 50px;
-
-    &:first-child {
-        margin-left: 0;
-        }
-}
 
 
