--- a/css/main.css
+++ b/css/main.css
@@ -594,7 +594,7 @@ a {
   background-repeat: no-repeat;
 }
 
-.hero-heading {
+.hero-section__heading {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
