--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,7 +10,7 @@ background-position: center;
 background-repeat: no-repeat;
 }
 
-.hero-heading {
+.hero-section__heading {
 font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
