--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -23,3 +23,25 @@ margin-left: auto;
 margin-right: auto;
 margin-bottom: 30px;
 }
+
+.button {
+    border-radius: 4px;
+    min-width: 240px;
+    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
+    padding: 10px 35.6px;
+    background-color: var(--button-color);
+    border: none;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.8;
+    letter-spacing: 0.06em;
+    color: var(--button-text-color);
+
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+        background-color: var(--button-active-color)
+    }
+}
