--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -31,11 +31,9 @@ margin-bottom: 30px;
     padding: 10px 35.6px;
     background-color: var(--button-color);
     border: none;
+    
     font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.8;
-    letter-spacing: 0.06em;
+    @include font-bold(16px, 1.8, 0.06em);
     color: var(--button-text-color);
 
     cursor: pointer;
