--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,18 +1,14 @@
 .logo {
     font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+    @include font-bold(26px, 1.19, 0.03em);
     color: var(--logo-color);
-    margin-right: 93px;
 
+    margin-right: 93px;
 }
 
 .logo__studio {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: var(--logo-studio);
-
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .logo:hover &,
     .logo:focus & {
         color: var(--link-active);
@@ -24,9 +20,8 @@
 }
 
 .logo__studio--inverse {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: var(--logo-studio-inverse);
-
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .logo:hover &,
     .logo:focus & {
         color: var(--link-active);
