--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -5,11 +5,8 @@ background-color: var(--bg-team-color);
 }
 
 .our-team-heading {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
+    @include font-bold(36px, 1.16, 0.03em);
 text-align: center;
-letter-spacing: 0.03em;
 color: var(--h-team-color);
 
 margin-bottom: 50px;
@@ -47,21 +44,16 @@ padding: 30px 0;
 }
 
 .team-name {
-font-weight: 500;
-font-size: 16px;
-line-height: 1.187;
+@include font-medium(16px, 1.187, 0.03em);
 text-align: center;
-letter-spacing: 0.03em;
 color: var(--team-name-color);
 margin: 0 0 10px;
 }
 
 .our-team-profession {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.187;
+@include font-normal(16px, 1.187, 0.03em);
 text-align: center;
-letter-spacing: 0.03em;
 color: var(--team-dsk-color);
+
 margin: 0;
 }
