--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -21,12 +21,10 @@ padding: 6px 22px;
 
 font-family: 'Roboto';
 font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
+@include font-medium(16px, 1.62, 0.03em);
 text-align: center;
-letter-spacing: 0.03em;
 color: var(--project-btn-text);
+
 cursor: pointer;
 background: var(--project-bg-btn);
 
@@ -97,10 +95,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
+    @include font-normal(18px, 1.56, 0.03em);
     color: #FFFFFF;
     background-color: rgba(33, 150, 243, 0.9);
 
@@ -122,18 +117,12 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
 }
 
 .project-heading {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+    @include font-bold(18px, 2, 0.06em);
     color: var(--project-card-h);
     margin-bottom: 4px;
 }
 
 .project-descriotion {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
+    @include font-normal(16px, 1.88, 0.03em);
     color: var(--project-card-dsk);
 }
