--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -1,10 +1,8 @@
 .what-heading {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
+    @include font-bold(36px, 1.16, 0.03em);   
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--h-what-color);
+
     margin: 0;
     margin-bottom: 50px;
 }
@@ -40,11 +38,8 @@
     padding-bottom: 27px;
     padding-top: 27px;
 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
+@include font-bold(14px, 1.14, 0.03em);
     text-align: center;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
 
