--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -29,10 +29,7 @@ height: 21px;
 
 .adress-place {
 font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
+@include font-normal(14px, 1.71, 0.03em);
 color: var(--adress-place-color);
 
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -45,10 +42,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .adress {
 font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
+@include font-normal(14px, 1.71, 0.03em);
 color: var(--adress-contact-color);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -63,10 +57,7 @@ color: var(--adress-contact-color);
 }
 
 .footer-social>h3 {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
+    @include font-bold(14px, 1.14, 0.03em);
     text-transform: uppercase;
     color: #FFFFFF;
 
@@ -86,10 +77,7 @@ margin-right: 0;
 display: inline-block;
 margin-bottom: 20px;
 
-font-weight: 700;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
+@include font-bold(14px, 1.14, 0.03em);
 text-transform: uppercase;
 color: #FFFFFF;
  }
@@ -114,25 +102,17 @@ padding-left: 16px;
 padding-right: 16px;
 
     &::placeholder {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.03em;
+    @include font-normal(16px, 1.25, 0.03em);
     color: rgba(255, 255, 255, 0.6);
         }
  }
 
  .submit-subscription {
-     display: flex;
-     justify-content: center;
-     align-items: center;
+    @include aligm(flex, center, center);
      margin-left: 12px;
-
-     font-weight: 700;
-     font-size: 16px;
-     line-height: 1.87;
+     
+     @include font-bold(16px, 1.87, 0.06em);   
      text-align: center;
-     letter-spacing: 0.06em;
      color: #FFFFFF;
 
      padding-top: 10px;
