--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,13 +5,14 @@
 @import "./base/_base.scss";
 @import "./base/container";
 @import "./base/section";
+@import "./base/title";
 
 @import "./components/_social-links-list.scss";
 @import "./components/logo";
 @import "./components/portfolio";
 @import "./components/_hero.scss";
 @import "./components/_features.scss";
-@import "./components/what-we-do";
+@import "./components/our-work";
 @import "./components/_our-team.scss";
 @import "./components/_our-clients.scss";
 
