--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -24,7 +24,7 @@ margin-right: auto;
 margin-bottom: 30px;
 }
 
-.button {
+.hero-section__button {
     border-radius: 4px;
     min-width: 240px;
     /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
