--- a/css/main.css
+++ b/css/main.css
@@ -474,17 +474,17 @@ a {
 }
 
 /*-------------- OUR TEAM---------------*/
-.our-team {
+.section__our-team {
   background-color: var(--bg-team-color);
 }
 
-.our-team-list {
+.our-team {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.team-card {
+.our-team__card {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -496,17 +496,17 @@ a {
   width: 25%;
   margin-left: var(--space-card);
 }
-.team-card:first-child {
+.our-team__card:first-child {
   margin-left: 0;
 }
 
 /*-------- Images--------*/
-.imag-team {
+.our-team__imag {
   width: 100%;
   display: block;
 }
 
-.container-team {
+.our-team__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -523,7 +523,7 @@ a {
   padding: 30px 0;
 }
 
-.team-name {
+.our-team__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.187;
@@ -533,7 +533,7 @@ a {
   margin: 0 0 10px;
 }
 
-.our-team-profession {
+.our-team__description {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.187;
