--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -1,13 +1,13 @@
 /*-------------- OUR TEAM---------------*/
-.our-team {
+.section__our-team {
 background-color: var(--bg-team-color);
 }
 
-.our-team-list {
+.our-team {
 display: flex;
 }
 
-.team-card {
+.our-team__card {
 flex-direction: column;
 background-color: var(--bg-taam-card-color);
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -21,12 +21,12 @@ margin-left: var(--space-card);
     }
 }
 /*-------- Images--------*/
-.imag-team {
+.our-team__imag {
     width: 100%;
     display: block;
 }
 
-.container-team {
+.our-team__container {
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -34,14 +34,14 @@ align-items: center;
 padding: 30px 0;
 }
 
-.team-name {
+.our-team__name {
 @include font-medium(16px, 1.187, 0.03em);
 text-align: center;
 color: var(--team-name-color);
 margin: 0 0 10px;
 }
 
-.our-team-profession {
+.our-team__description {
 @include font-normal(16px, 1.187, 0.03em);
 text-align: center;
 color: var(--team-dsk-color);
