--- a/css/main.css
+++ b/css/main.css
@@ -102,24 +102,24 @@ a {
   margin-bottom: 50px;
 }
 
-.social-list {
+.social-links-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-top: 16px;
 }
-.footer-social > .social-list {
+.footer-social > .social-links-list {
   margin: 0;
 }
 
-.social-li {
+.social-links-list__item {
   margin-left: 10px;
 }
-.social-li:first-child {
+.social-links-list__item:first-child {
   margin-left: 0;
 }
 
-.social-li > a {
+.social-links-list__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -136,26 +136,26 @@ a {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-li > a:hover, .social-li > a:focus {
+.social-links-list__link:hover, .social-links-list__link:focus {
   background-color: var(--link-active);
   fill: #fff;
 }
 
-.icon-social {
+.social-links-list__icon {
   display: block;
   fill: inherit;
 }
-.footer-social .icon-social {
+.footer-social .social-links-list__icon {
   fill: #FFFFFF;
 }
 
-.footer-social a {
+.social-links-list__item--footer {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
 }
-.footer-social a:hover, .footer-social a:focus {
+.social-links-list__item--footer:hover, .social-links-list__item--footer:focus {
   background-color: var(--link-active);
 }
 
@@ -782,24 +782,7 @@ a {
   margin-left: 70px;
 }
 
-.footer-social > h3 {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  margin-bottom: 20px;
-}
-
-/* Subscription */
-.subscription {
-  width: 100%;
-  margin-left: 93px;
-  margin-right: 0;
-}
-
-.subscription strong {
+.footer-social__title {
   display: inline-block;
   margin-bottom: 20px;
   font-weight: 700;
@@ -810,13 +793,20 @@ a {
   color: #FFFFFF;
 }
 
-.wraper-subscrip {
+/* Subscription */
+.footer-subscription {
+  width: 100%;
+  margin-left: 93px;
+  margin-right: 0;
+}
+
+.footer-subscription__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.field-subscription {
+.footer-subscription__field {
   width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: #2F303A;
@@ -830,35 +820,35 @@ a {
   padding-left: 16px;
   padding-right: 16px;
 }
-.field-subscription::-webkit-input-placeholder {
+.footer-subscription__field::-webkit-input-placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.field-subscription::-moz-placeholder {
+.footer-subscription__field::-moz-placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.field-subscription:-ms-input-placeholder {
+.footer-subscription__field:-ms-input-placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.field-subscription::-ms-input-placeholder {
+.footer-subscription__field::-ms-input-placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.field-subscription::placeholder {
+.footer-subscription__field::placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -866,7 +856,7 @@ a {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.submit-subscription {
+.footer-subscription__submit {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -896,11 +886,11 @@ a {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.submit-subscription:hover, .submit-subscription:focus {
+.footer-subscription__submit:hover, .footer-subscription__submit:focus {
   background-color: var(--button-active-color);
 }
 
-.submit-subscription svg {
+.footer-subscription__icon-submit {
   margin-left: 10px;
 }
 
