--- a/sass/components/_social-links-list.scss
+++ b/sass/components/_social-links-list.scss
@@ -1,4 +1,4 @@
-.social-list {
+.social-links-list {
     display: flex;
     margin-top: 16px;
     .footer-social>& {
@@ -6,7 +6,7 @@
     }
 }
 
-.social-li {
+.social-links-list__item {
     margin-left: 10px;
 
     &:first-child {
@@ -14,7 +14,7 @@
     }
 }
 
-.social-li>a {
+.social-links-list__link {
     @include aligm(flex, center, center);
     height: 44px;
     width: 44px;
@@ -29,7 +29,7 @@
     }
 }
 
-.icon-social {
+.social-links-list__icon {
     display: block;
     fill: inherit;
     .footer-social & {
@@ -40,7 +40,7 @@
 // ===Footer=== //
 
 
-.footer-social a {
+.social-links-list__item--footer {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     border-radius: 50%;
