--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -46,6 +46,7 @@ font-style: normal;
 color: var(--adress-contact-color);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     &:focus,
     &:hover {
         color: var(--link-active);
@@ -56,37 +57,27 @@ color: var(--adress-contact-color);
     margin-left: 70px;
 }
 
-.footer-social>h3 {
+.footer-social__title {
+    display: inline-block;
+    margin-bottom: 20px;
+
     @include font-bold(14px, 1.14, 0.03em);
     text-transform: uppercase;
     color: #FFFFFF;
-
-    margin-bottom: 20px;
 }
 
  /* Subscription */
-.subscription {
+.footer-subscription {
 width: 100%;
 margin-left: 93px;
 margin-right: 0;
+}
 
- }
-
- .subscription strong {
-
-display: inline-block;
-margin-bottom: 20px;
-
-@include font-bold(14px, 1.14, 0.03em);
-text-transform: uppercase;
-color: #FFFFFF;
- }
-
-.wraper-subscrip {
+.footer-subscription__container {
 display: flex;
 }
 
-.field-subscription {
+.footer-subscription__field {
 width: 100%;
 border: 1px solid rgba(255, 255, 255, 0.3);
 background-color: #2F303A;
@@ -107,7 +98,7 @@ padding-right: 16px;
         }
  }
 
- .submit-subscription {
+ .footer-subscription__submit {
     @include aligm(flex, center, center);
      margin-left: 12px;
      
@@ -135,7 +126,7 @@ padding-right: 16px;
 
  }
 
-.submit-subscription svg {
+.footer-subscription__icon-submit {
 margin-left: 10px;
  }
 
