--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -7,13 +7,18 @@
 
 .clients__card {
     display: block;
-    width: calc(100%/6);
+    width: calc(100%/6) ;
+    margin-left: 30px;
+
+    &:first-child{
+    margin-left: 0;
+    }
 }
 
 .clients__link {
     @include aligm(flex, center, center);
     height: 92px;
-    width: 170px;
+    
 
     border: 1px solid var(--icon-color);
     border-radius: 4px;
