--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,17 +7,14 @@ padding: 60px 0px;
     }
 }
 
-.footer-list {
+.footer-addres {
 display: flex;
 flex-direction: column;
 min-width: fit-content;
 }
 
-.footer-addres {
-padding-right: 25px;
-}
 
-.adress-list {
+.footer-addres__item {
 display: block;
 margin-bottom: 9px;
 height: 21px;
@@ -27,7 +24,7 @@ height: 21px;
     }
 }
 
-.adress-place {
+.footer-addres__place {
 font-style: normal;
 @include font-normal(14px, 1.71, 0.03em);
 color: var(--adress-place-color);
@@ -40,7 +37,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 }
 
-.adress {
+.footer-addres__contact {
 font-style: normal;
 @include font-normal(14px, 1.71, 0.03em);
 color: var(--adress-contact-color);
