--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@
   --button-text-color: #FFFFFF;
   --button-active-color: #188CE8;
   --button-color: #2196F3;
+  --project-bg-btn: #F5F4FA;
+  --project-border-btn: #F5F4FA;
+  --project-btn-text: #212121;
+  --project-btn-active-text: #FFFFFF;
   --link-active: #2196F3;
   --adress-contact-color: rgba(255, 255, 255, 0.6);
   --adress-place-color: #FFFFFF;
@@ -26,10 +30,6 @@
   --nav-line: #ECECEC;
   --icon-color: #AFB1B8;
   /* colors of portfolio */
-  --project-bg-btn: #F5F4FA;
-  --project-border-btn: #F5F4FA;
-  --project-btn-text: #212121;
-  --project-btn-active-text: #FFFFFF;
   --project-card-border: #EEEEEE;
   --project-card-h: #212121;
   --project-card-dsk: #757575;
@@ -49,6 +49,29 @@
           clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.modal__submit, .hero-section__button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-align: center;
+  color: var(--button-text-color);
+  background-color: var(--button-color);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__submit:hover, .hero-section__button:hover, .modal__submit:focus, .hero-section__button:focus {
+  background-color: var(--button-active-color);
 }
 
 h1,
@@ -207,22 +230,21 @@ a {
 }
 
 .navigation-portfolio__button {
-  width: auto;
-  min-height: 38px;
   min-width: 73px;
-  border-radius: 4px;
-  border: var(--project-border-btn);
-  padding: 6px 22px;
-  font-family: "Roboto";
-  font-style: normal;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--project-btn-text);
+  background-color: var(--project-bg-btn);
+  border-radius: 4px;
+  border: var(--project-border-btn);
   cursor: pointer;
-  background: var(--project-bg-btn);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -354,24 +376,10 @@ a {
 }
 
 .hero-section__button {
-  border-radius: 4px;
-  min-width: 240px;
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
-  padding: 10px 35.6px;
-  background-color: var(--button-color);
-  border: none;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.8;
-  letter-spacing: 0.06em;
-  color: var(--button-text-color);
-  cursor: pointer;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero-section__button:hover {
-  background-color: var(--button-active-color);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
 
 /*   ------------Our feature ------------- */
@@ -622,6 +630,12 @@ a {
   display: -ms-flexbox;
   display: flex;
 }
+.navigation__list > .navigation__li {
+  margin-left: 50px;
+}
+.navigation__list > .navigation__li:first-child {
+  margin-left: 0;
+}
 
 .navigation__element {
   font-weight: 500;
@@ -636,21 +650,13 @@ a {
   color: var(--link-active);
 }
 
-.navigation__list > .navigation__li {
-  margin-left: 50px;
-}
-
-.navigation__list > .navigation__li:first-child {
-  margin-left: 0;
-}
-
-.current {
+.navigation__current {
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--link-active);
   position: relative;
 }
-.current::after {
+.navigation__current::after {
   content: "";
   display: block;
   left: 0;
@@ -680,12 +686,9 @@ a {
   margin-left: 0;
 }
 
-.contacts__li > a {
+.contacts__contact {
   padding-top: 32px;
   padding-bottom: 32px;
-}
-
-.contacts__contact {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1129,28 +1132,8 @@ a {
 }
 
 .modal__submit {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 52px;
   padding-right: 52px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  text-align: center;
-  color: #FFFFFF;
-  background-color: var(--button-color);
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal__submit:hover, .modal__submit:focus {
-  background-color: var(--button-active-color);
 }/*# sourceMappingURL=main.css.map */
