--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -25,21 +25,11 @@ margin-bottom: 30px;
 }
 
 .hero-section__button {
-    border-radius: 4px;
-    min-width: 240px;
-    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
-    padding: 10px 35.6px;
-    background-color: var(--button-color);
-    border: none;
-    
-    font-style: normal;
-    @include font-bold(16px, 1.8, 0.06em);
-    color: var(--button-text-color);
+@extend %button;
 
-    cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding-top: 10px;
+padding-bottom: 10px;
+padding-left: 32px;
+padding-right: 32px;
 
-    &:hover {
-        background-color: var(--button-active-color)
-    }
 }
