--- a/sass/layout/_heder.scss
+++ b/sass/layout/_heder.scss
@@ -14,28 +14,28 @@ align-items: center;
 
 .navigation__list {
     display: flex;
+
+    &>.navigation__li {
+        margin-left: 50px;
+    }
+    &>.navigation__li:first-child {
+        margin-left: 0;
+    }
 }
 
 .navigation__element {
     @include font-medium(14px, 1.14, 0.02em);
-color: var(--nav-color);
+    color: var(--nav-color);
 
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:focus,
     &:hover {
     color: var(--link-active);
         }
 }
-
-.navigation__list>.navigation__li {
- margin-left: 50px;
-}
-.navigation__list>.navigation__li:first-child {
- margin-left: 0;
-}
 // ======== Current ========//
-.current {
+.navigation__current {
 padding-top: 32px;
 padding-bottom: 32px;
 color: var(--link-active);
@@ -68,12 +68,11 @@ position: relative;
         margin-left: 0;
     }
 }
-.contacts__li>a {
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
 
 .contacts__contact {
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     @include aligm(flex, center, center);
     
     @include font-medium(14px, 1.14, 0.02em);
