--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -171,31 +171,11 @@ transition: transform 250ms linear;
     }
 }
 
-
 .modal__submit {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    @extend %button;
 
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 52px;
-    padding-right: 52px;
-    
-    @include font-bold(16px,1.87 ,0.06em);
-    text-align: center;
-    color: #FFFFFF;
-
-    background-color: var(--button-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
-    &:hover,
-    &:focus {
-        background-color: var(--button-active-color);
-    }
+    padding-right: 52px
 }
