--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./utils/_variables.scss";
 @import "./utils/_visually-hidden.scss";
 @import "./utils/mixin";
+@import "./utils/placeholder";
 
 @import "./base/_base.scss";
 @import "./base/container";
