--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -55,7 +55,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
-    src: local(''),
+    src: local('../fonts/roboto-v30-latin-900.woff2'),
         url('../fonts/roboto-v30-latin-900.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/roboto-v30-latin-900.woff') format('woff');
