--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -12,6 +12,8 @@ background-repeat: no-repeat;
 
 .hero-section__heading {
     
+font-style: normal;
+        
 font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
