--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,14 @@
+@import "./base/normalaize";
 
 @import "./utils/index";
+
+
 
 @import "./base/index";
 
 @import "./layout/index";
 
 @import "./components/index";
+
+@import "./utils/fonts";
 
