--- a/sass/base/_title.scss
+++ b/sass/base/_title.scss
@@ -1,5 +1,5 @@
 .title {
-    
+    font-family: 'Roboto';
     @include font-bold(36px, 1.16, 0.03em);
     text-align: center;
     color: var(--h-what-color);
