--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -1,17 +1,22 @@
-
-
 /* raleway-700 - latin */
 @font-face {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
+    src: url('../fonts/raleway-v28-latin-700.eot');
+    /* IE9 Compat Modes */
     src: local(''),
+        url('../fonts/raleway-v28-latin-700.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
         url('../fonts/raleway-v28-latin-700.woff2') format('woff2'),
-        /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/raleway-v28-latin-700.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        /* Super Modern Browsers */
+        url('../fonts/raleway-v28-latin-700.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/raleway-v28-latin-700.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/raleway-v28-latin-700.svg#Raleway') format('svg');
+    /* Legacy iOS */
 }
-
 
 
 /* roboto-regular - latin */
@@ -19,11 +24,19 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
+    src: url('../fonts/roboto-v30-latin-regular.eot');
+    /* IE9 Compat Modes */
     src: local(''),
+        url('../fonts/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
         url('../fonts/roboto-v30-latin-regular.woff2') format('woff2'),
-        /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/roboto-v30-latin-regular.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        /* Super Modern Browsers */
+        url('../fonts/roboto-v30-latin-regular.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/roboto-v30-latin-regular.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/roboto-v30-latin-regular.svg#Roboto') format('svg');
+    /* Legacy iOS */
 }
 
 /* roboto-500 - latin */
@@ -31,11 +44,19 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
+    src: url('../fonts/roboto-v30-latin-500.eot');
+    /* IE9 Compat Modes */
     src: local(''),
+        url('../fonts/roboto-v30-latin-500.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
         url('../fonts/roboto-v30-latin-500.woff2') format('woff2'),
-        /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/roboto-v30-latin-500.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        /* Super Modern Browsers */
+        url('../fonts/roboto-v30-latin-500.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/roboto-v30-latin-500.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/roboto-v30-latin-500.svg#Roboto') format('svg');
+    /* Legacy iOS */
 }
 
 /* roboto-700 - latin */
@@ -43,11 +64,19 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
+    src: url('../fonts/roboto-v30-latin-700.eot');
+    /* IE9 Compat Modes */
     src: local(''),
+        url('../fonts/roboto-v30-latin-700.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
         url('../fonts/roboto-v30-latin-700.woff2') format('woff2'),
-        /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/roboto-v30-latin-700.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        /* Super Modern Browsers */
+        url('../fonts/roboto-v30-latin-700.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/roboto-v30-latin-700.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/roboto-v30-latin-700.svg#Roboto') format('svg');
+    /* Legacy iOS */
 }
 
 /* roboto-900 - latin */
@@ -55,9 +84,17 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
-    src: local('../fonts/roboto-v30-latin-900.woff2'),
+    src: url('../fonts/roboto-v30-latin-900.eot');
+    /* IE9 Compat Modes */
+    src: local(''),
+        url('../fonts/roboto-v30-latin-900.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
         url('../fonts/roboto-v30-latin-900.woff2') format('woff2'),
-        /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/roboto-v30-latin-900.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        /* Super Modern Browsers */
+        url('../fonts/roboto-v30-latin-900.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/roboto-v30-latin-900.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/roboto-v30-latin-900.svg#Roboto') format('svg');
+    /* Legacy iOS */
 }
