--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -83,7 +83,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
 .project-card__hover-transform {
     position: absolute;
     // last three card is bad
-    bottom: -0.1;
+    bottom: -0.1px;
     // 
     left: 0;
     width: 100%;
