--- a/css/main.css
+++ b/css/main.css
@@ -3609,7 +3609,7 @@ a {
 }
 
 .project-list__project-card {
-  width: calc((100% - 60px) / 3);
+  width: calc((100% - 2 * var(--space-card)) / 3);
   margin-left: var(--space-card);
   margin-bottom: var(--space-card);
 }
@@ -3742,7 +3742,7 @@ a {
 
 /* feature  card*/
 .feature__card {
-  width: calc((100% - 90px) / 4);
+  width: calc((100% - 2 * var(--space-card)) / 4);
   margin-left: var(--space-card);
 }
 .feature__card:first-child {
@@ -3792,7 +3792,7 @@ a {
 }
 
 .our-work__card {
-  width: calc((100% - 60px) / 3);
+  width: calc((100% - 2 * var(--space-card)) / 3);
   position: relative;
   margin-left: var(--space-card);
 }
@@ -3848,7 +3848,7 @@ a {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  width: calc((100% - 90px) / 4);
+  width: calc((100% - 3 * var(--space-card)) / 4);
   margin-left: var(--space-card);
 }
 .our-team__card:first-child {
@@ -3914,7 +3914,7 @@ a {
 }
 
 .clients__card {
-  width: calc((100% - 150px) / 6);
+  width: calc((100% - 5 * var(--space-card)) / 6);
   margin-left: 30px;
 }
 .clients__card:first-child {
