--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -47,7 +47,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
 
 .project-list__project-card {
     // width: calc( (100% / 3) - (2 * var(--space-card) ));
-    width: calc((100% - 60px) / 3);
+    width: calc((100% - (2*var(--space-card))) / 3);
     margin-left: var(--space-card);
     margin-bottom: var(--space-card);
 
