--- a/css/main.css
+++ b/css/main.css
@@ -3037,8 +3037,8 @@ a {
   text-decoration: none;
   color: var(--contacts-color);
   fill: var(--contacts-color);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts__contact:hover, .contacts__contact:focus {
   color: var(--link-active);
