--- a/sass/layout/_heder.scss
+++ b/sass/layout/_heder.scss
@@ -80,7 +80,7 @@ position: relative;
     color: var(--contacts-color);
     fill: var(--contacts-color);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) ,fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
